modify paimon utils class